--- a/career-guide-template/pages/index.html
+++ b/career-guide-template/pages/index.html
@@ -2,20 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 maxium-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="Index page">
     <meta name="keywords" content="index, page">
     <meta name="author" content="letienhoang">
-    <link rel="shortcut icon" type="imgage/x-icon" href="/assets/imgs/templates/favicon.svg">
+    <link rel="shortcut icon" type="imgage/svg+xml" href="/assets/imgs/templates/favicon.svg">
     <link rel="stylesheet" href="/assets/css/styles.css?v=1.0">
     <title>CG - Carrer Guide Template</title>
 </head>
 <body>
-    <div id="preloader"></div>
-    <div class="topbar"></div>
-    <header></header>
-    <div class="mobile-header"></div>
-    <div class="main"></div>
+    <div id="preloader" aria-hidden="true"></div>
+    <div class="topbar" aria-label="Top Navigation"></div>
+    <header>
+        <nav></nav>
+    </header>
+    <div class="mobile-header" aria-label="Mobile Navigation"></div>
+    <main></main>
     <footer></footer>
+
+    <!-- External JS libraries -->
+    <script src="/assets/js/vendors/jquery/jquery-3.7.1.min.js" defer></script>
+    <script src="/assets/js/vendors/bootstrap/bootstrap.bundle.min.js" defer></script>
 </body>
 </html>
